test/conformance/kuttl/mutate/clusterpolicy/standard/existing/mutate-existing-node-status/02-script.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: ./modify-resource-filters.sh removeNode
  # Send an update request to the node
  - command: kubectl label nodes kind-control-plane abc=xyz
