test/conformance/kuttl/mutate/clusterpolicy/standard/existing/mutate-existing-node-status/99-cleanup.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - command: kubectl delete cpol advertise-resource --force --wait=true --ignore-not-found=true
  - script: ./modify-resource-filters.sh addNode
  - script: ./clear-modified-node-status.sh
  - command: kubectl label nodes kind-control-plane abc-
